--- a/src/app/trayecto/trayecto-crear/trayecto-crear.component.html
+++ b/src/app/trayecto/trayecto-crear/trayecto-crear.component.html
@@ -5,21 +5,22 @@
             <h2 class="text-center">Bienvenido a Trayecto</h2>
             <br>
             <form name="Trayecto" (ngSubmit)="f.form.valid && createTrayecto()" #f="ngForm" novalidate>
-                <div class="form-group">
-                    <label for="fechaInicial"><b>Fecha de Inicio</b></label>
-                    <input type="text" name="fechaInicial" class="form-control" id="fechaInicial" [(ngModel)]="trayecto.fechaInicial"
-                        #apellido="ngModel" [ngClass]="{ 'is-invalid': f.submitted && fechaInicial.invalid }"  required>
-                    <div class="invalid-feedback">
-                        <div>Falta la fecha de inicio</div>
-                    </div>
-                </div>
+                
                 <div class="form-group">
                     <label for="fechaFinal"><b>Fecha Final</b></label>
-                    <input type="text" name="fechaFinal" class="form-control" id="fechaFinal" [(ngModel)]="trayecto.fechaFinal"
+                    <input type="text" name="fechaFinal" class="form-control" id="fechaFinal" name="fechaFinal" [(ngModel)]="trayecto.fechaFinal"
                         #documento="ngModel" [ngClass]="{ 'is-invalid': f.submitted && fechaFinal.invalid }" required>
                     <div class="invalid-feedback">
                         <div>Falta la fecha final</div>
                     </div>
+                </div>
+                <div class="form-group">
+                        <label for="fechaInicial"><b>Fecha Inicial</b></label>
+                        <input type="text" name="fechaInicial" class="form-control" id="fechaInicial" name="fechaInicial" [(ngModel)]="trayecto.fechaInicial"
+                            #documento="ngModel" [ngClass]="{ 'is-invalid': f.submitted && fechaInicial.invalid }" required>
+                        <div class="invalid-feedback">
+                            <div>Falta la fecha inicial</div>
+                        </div>
                 </div>
                 <div class="form-group">
                     <label for="Estado"><b>Estado</b></label>
