--- a/src/app/trayecto/trayecto-crear/trayecto-crear.component.html
+++ b/src/app/trayecto/trayecto-crear/trayecto-crear.component.html
@@ -4,20 +4,14 @@
             <br>
             <h2 class="text-center">Bienvenido a Trayecto</h2>
             <br>
-            <form name="Trayecto" (ngSubmit)="f.form.valid && createTrayecto()" #f="ngForm" novalidate>
+            <form name="trayecto" (ngSubmit)="f.form.valid && createTrayecto()" #f="ngForm" novalidate>
                 
-                <div class="form-group">
-                    <label for="fechaFinal"><b>Fecha Final</b></label>
-                    <input type="text" name="fechaFinal" class="form-control" id="fechaFinal" name="fechaFinal" [(ngModel)]="trayecto.fechaFinal"
-                        #documento="ngModel" [ngClass]="{ 'is-invalid': f.submitted && fechaFinal.invalid }" required>
-                    <div class="invalid-feedback">
-                        <div>Falta la fecha final</div>
-                    </div>
-                </div>
-                <div class="form-group">
+               
+             <div class="form-group">
                         <label for="fechaInicial"><b>Fecha Inicial</b></label>
-                        <input type="text" name="fechaInicial" class="form-control" id="fechaInicial" name="fechaInicial" [(ngModel)]="trayecto.fechaInicial"
-                            #documento="ngModel" [ngClass]="{ 'is-invalid': f.submitted && fechaInicial.invalid }" required>
+                        <input class="form-control" id="fechaInicial" name="fechaInicial" [(ngModel)]="trayecto.fechaInicial"
+                        ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()" #fechaInicial="ngModel" [ngClass]="{'is-invalid': (fechaInicial.untouched || fechaInicial.invalid) }"
+                        required>
                         <div class="invalid-feedback">
                             <div>Falta la fecha inicial</div>
                         </div>
@@ -25,7 +19,7 @@
                 <div class="form-group">
                     <label for="Estado"><b>Estado</b></label>
                     <input type="text" name="estado" class="form-control" id="estado" [(ngModel)]="trayecto.estado"
-                        #documento="ngModel" [ngClass]="{ 'is-invalid': f.submitted && estado.invalid }" required>
+                        #estado="ngModel" [ngClass]="{ 'is-invalid': f.submitted && estado.invalid }" required>
                     <div class="invalid-feedback">
                         <div>Falta la Estado</div>
                     </div>
@@ -33,7 +27,7 @@
                 <div class="form-group">
                     <label for="Id"><b>Id</b></label>
                     <input type="text" name="id" class="form-control" id="id" [(ngModel)]="trayecto.id"
-                        #documento="ngModel" [ngClass]="{ 'is-invalid': f.submitted && id.invalid }" required>
+                        #id="ngModel" [ngClass]="{ 'is-invalid': f.submitted && id.invalid }" required>
                     <div class="invalid-feedback">
                         <div>Falta la Id</div>
                     </div>
