--- a/src/app/trayecto-layout/main-screen/main-screen.component.html
+++ b/src/app/trayecto-layout/main-screen/main-screen.component.html
@@ -18,96 +18,18 @@
  
 <div class="col-6 offset-3">
     <br>
-    <h2 class="text-center">Buscar Trayecto</h2>
+    <h2 class="text-center" >Crear Trayecto</h2>
+    <div class="col-6"><app-trayecto-crear></app-trayecto-crear> </div>
     <br>
-    <form name="search" (ngSubmit)="submit()" #f="ngForm" id ="search" *ngIf="buscar!=null">
-        <div class="form-group">
-            <label for="fechaInicial"><b>Fecha Inicial</b></label>
-            <input type="date" name="username" class="form-control" id="inicio" [(ngModel)]="buscar.inicio">
-        </div>
 
-        <div class="form-group">
-            <label for="fechaFinal"><b>Fecha Final</b></label>
-            <input type="date" name="fechaFinal" class="form-control" id="final" [(ngModel)]="buscar.final">
-        </div>
-
-      
-        <div class="form-group" *ngIf="ciudades!=null">
-          <label for="origen"><b>Origen</b></label>
-          <select class="form-control" name="origen" form="search"   [(ngModel)]="buscar.origen" >
-            <option *ngFor = "let ciudad of ciudades" value = {{ciudad.nombre}} >{{ciudad.nombre}}</option>
-          </select>
-        </div>
-
-        <div class="form-group" *ngIf="ciudades!=null">
-          <label for="destino"><b>Destino</b></label>
-          <select class="form-control" name="destino" form="search"   [(ngModel)]="buscar.destino" >
-              <option *ngFor = "let ciudad of ciudades" value = {{ciudad.nombre}} >{{ciudad.nombre}}</option>
-          </select>
-        </div>
-            
-        <div class="form-group">
-          <label for="costo"><b>Costo</b></label>
-          <input type="search" name="costo" class="form-control" id="costo" [(ngModel)]="buscar.costo">
-        </div>
-  <details>     
-      <div class="form-group" *ngIf="usuarios!=null">
-          <label for="conductor"><b>Conductor</b></label>
-          <select class="form-control" name="conductor" form="search"   [(ngModel)]="buscar.conductor" >
-              <option *ngFor = "let user of usuarios" value = {{user.id}} >{{user.username}}</option>
-          </select>
-      </div>
-
-      <div class="form-group" *ngIf="usuarios!=null">
-        <label for="pasajero"><b>Pasajero</b></label>
-        <select class="form-control" name="pasajero" form="search"   [(ngModel)]="buscar.pasajero" >
-            <option type="checkbox" *ngFor = "let user of usuarios" value = {{user.id}} >{{user.username}}</option>
-        </select>
-       </div>
-      
-       <div class="form-group">
-        <label for="estado"><b>Estado</b></label>
-        <select class="form-control" name="estado" form="search"  [(ngModel)]="buscar.estado" [(ngModel)]="buscar.estado">
-          <option value = "0">Futuro</option>
-          <option value = "1">Actual</option>
-          <option value = "2">Pasado</option>
-          <option value = "3">No Realizado</option>
-        </select>
-    </div>
-
-
-      <div class="form-group">
-        <label for="duracion"><b>Duracion</b></label>
-        <input type="search" name="duracion" class="form-control" id="duracion" [(ngModel)]="buscar.duracion">
-     </div>
-
-      
-      <div class="form-group" *ngIf="ciudades!=null">
-        <label for="paradas"><b>Paradas</b></label>
-          <select class="form-control" name="paradas" id="paradas" [(ngModel)]="buscar.paradas" form="search"   [(ngModel)]="buscar.paradas" >
-              <option *ngFor = "let ciudad of ciudades" value = {{ciudad.nombre}} >{{ciudad.nombre}}</option>
-          </select>
-      </div>
-
-    <div class="form-group"  *ngIf="peajes!=null">
-      <label for="peajes"><b>Peajes</b></label>
-      <select class="form-control" name="peajes" form="search"  [(ngModel)]="buscar.peajes">
-          <option  *ngFor = "let peaje of peajes" value = {{peaje.id}} >{{peaje.nombre}}</option>
-      </select>
-     </div>
-
-    <div class="form-group" *ngIf="vehiculos!=null">
-      <label for="vehiculo"><b>Vehiculo</b></label>
-      <select class="form-control" name="vehiculo" form="search"  [(ngModel)]="buscar.vehiculo" >
-          <option  *ngFor = "let vehiculo of vehiculos" value = {{vehiculo.id}} >{{vehiculo.placa}}</option>
-      </select>
-    </div>
-  </details> 
-        <div class="justify-content-center align-self-center">
-            <button type="submit" class="btn btn-primary" routerLink="/home">Buscar</button>
-        </div>
-      </form>
  </div>
+
+ <div class="col-6 offset-3">
+  <br>
+  <h2 class="text-center">Trayectos Futuros</h2>
+  <br>
+
+</div>
 
 </div>
 
