--- a/src/app/trayecto-layout/main-screen/main-screen.component.html
+++ b/src/app/trayecto-layout/main-screen/main-screen.component.html
@@ -1,4 +1,4 @@
-<!--
+
 <div class="row">
   <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
@@ -27,10 +27,10 @@
  <div class="col-6 offset-3">
   <br>
   <h2 class="text-center">Trayectos Futuros</h2>
+  <div class="col-6"><app-trayectos-futuros></app-trayectos-futuros> </div>
   <br>
 
 </div>
 
 </div>
 
--->
