--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -5,18 +5,14 @@
       <a routerLink="/home">Trayectos</a>
       <a routerLink="/pestaña-trayecto">Información Trayectos</a>
     </div>
-    <div id="main">
+    <div id="main" class="col-sm-2">
         <span style="font-size:30px;cursor:pointer" (click)="openNav()">&#9776; Menu </span>
       </div>
 
 
-      <div class="col-7" *ngIf="usuario!=null">
-          Bienvenido {{usuario.nombre}}
-          <button class="button button5" routerLink="/usuario/menu">Usuario</button>
       
-       </div>
  
-<div class="col-6 offset-3">
+<div class="col-sm-9">
     <br>
     <h2 class="text-center">Buscar Trayecto</h2>
     <br>
@@ -109,9 +105,9 @@
       </form>
  </div>
 
- <div class="col-sm-2" *ngIf="usuario!=null">
+ <div class="col-sm-1" *ngIf="usuario!=null">
     
-    <div class="col-sm-5"  >
+    <div class=""  >
       <button routerLink="/usuario/menu" class="btn btn-light" type="button">
         <img class="img-profile img-circle img-responsive center-block" src="http://chittagongit.com//images/generic-user-icon/generic-user-icon-13.jpg" alt="50" width="50">
         <ul class="meta list list-unstyled">
